; ModuleID = '/home/carl/AnghaBench/netdata/collectors/cups.plugin/extr_cups_plugin.c_health_variable_lookup.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/cups.plugin/extr_cups_plugin.c_health_variable_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rrdcalc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @health_variable_lookup(i8* %0, i32 %1, %struct.rrdcalc* %2, i32* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.rrdcalc*, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.rrdcalc* %2, %struct.rrdcalc** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.rrdcalc*, %struct.rrdcalc** %7, align 8
  %12 = load i32*, i32** %8, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
